--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     
     <h1> Bienvenidos a Estancia Los Colibries</h1>
-    <script src="entrega.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
