--- a/index.html
+++ b/index.html
@@ -4,11 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Estancia Los Colibries</title>
 </head>
+
 <body>
-    
     <h1> Bienvenidos a Estancia Los Colibries</h1>
+
+    <a href="./imagenes/colibri.jpg"></a>
+
+    <div>
+        <p id="proposito"> Nuestro objetivo, es brindarles el mayor descanso que necesitan para poder continuar con la vidia cotidiana.</p>
+    </div>
+
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./imagenes/estancia.jpg" class="d-block w-100" alt="Estancia">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagenes/vista.jpg" class="d-block w-100" alt="Vista">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagenes/relax.jpg" class="d-block w-100" alt="Relax">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagenes/pileta2.jpg" class="d-block w-100" alt="Pileta">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagenes/habitacion1.jpg" class="d-block w-100" alt="Habitacion">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagenes/habitacion.jpg" class="d-block w-100" alt="Habitacion">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagenes/hidro.jpg" class="d-block w-100" alt="Hidromasajes">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagenes/gimnasio.jpg" class="d-block w-100" alt="Gimnasio">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagenes/spa.jpg" class="d-block w-100" alt="Spa">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagenes/paisaje.jpg" class="d-block w-100" alt="Paisaje">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+<footer>
+    <p>
+        Redes Sociales
+    </p>
+</footer>
+
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
