--- a/index.html
+++ b/index.html
@@ -10,12 +10,34 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./imagenes/colibri.jpg">Estancia Los Colibries
+                <img class="icono" src="./imagenes/colibri.jpg" alt="icono">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="./reserva.html">Reserva</a>
+                </div>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="./Contactenos.html">Contactenos</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <h1> Bienvenidos a Estancia Los Colibries</h1>
 
     <a href="./imagenes/colibri.jpg"></a>
 
     <div>
-        <p id="proposito"> Nuestro objetivo, es brindarles el mayor descanso que necesitan para poder continuar con la vidia cotidiana.</p>
+        <p id="proposito"> DISFRUTA DE UNA EXPERIENCIA ÚNICA EN LAS SIERRAS DE CÓRDOBA, ARGENTINA</p>
     </div>
 
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -67,7 +89,7 @@
     </p>
 </footer>
 
-    <script src="script.js"></script>
+    <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
