--- a/Contactenos.html
+++ b/Contactenos.html
@@ -12,9 +12,8 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="./imagenes/colibri.jpg">Estancia Los Colibries
+        <a class="navbar-brand" href="./index.html">Estancia Los Colibries
             <img class="icono" src="./imagenes/colibri.jpg" alt="icono">
-            <a href="./index.html"></a>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,43 +21,55 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Reserva</a>
-                <a href="./reserva.html"></a>
+                <a class="nav-link active" aria-current="page" href="./reserva.html">Reserva</a>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Contactenos</a>
-                <a href="Contactenos.html"></a>
+                <a class="nav-link active" aria-current="page" href="Contactenos.html">Contactenos
+                  <img src="./imagenes/wp.png" alt="whatsapp">
+                </a>
             </div>
         </div>
     </div>
 </nav>
 
 <h1>Contacto</h1>
-<p>Nuestro principal objetivo, es poder resolver sus dudas y que nos siga eligiendo</p>
+<h3>Nuestro principal objetivo, es poder resolver sus dudas y que nos siga eligiendo</h3>
 
 <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+    <label for="exampleFormControlInput1" class="form-label"><strong>Nombre</strong></label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Apellido</label>
+    <label for="exampleFormControlInput1" class="form-label"><strong>Apellido</strong></label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Telefono</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="+ ...(codigo de area) + telefono">
+    <label for="exampleFormControlInput1" class="form-label"><strong>Telefono</strong></label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="+ ... (codigo de area) + telefono">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+    <label for="exampleFormControlInput1" class="form-label"><strong>Email address</strong></label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+    <label for="exampleFormControlTextarea1" class="form-label"><strong>Mensaje</strong></label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
+  <div>
+    <button type="button" id="contacto"> Enviar consulta </button>
+  </div>
+
+<footer>
+  <div class="container flex justify-space-between footer-box">
+      <p class="regular-text ">Copyright © 2023 <strong>Fiorella Del Carlo</strong>. Todos los derechos reservados.</p>
+      <p class="regular-text ">Diseñado por <strong>Fiorella Del Carlo</strong></p>
+  </div>
+</footer>
+
     <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+
 </html>
