--- a/Contactenos.html
+++ b/Contactenos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css/estilos.css">
     <title>Contactenos</title>
 </head>
 <body>
@@ -38,24 +38,24 @@
 <h3>Nuestro principal objetivo, es poder resolver sus dudas y que nos siga eligiendo</h3>
 
 <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label"><strong>Nombre</strong></label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+    <label for="imputForm" class="form-label"><strong>Nombre</strong></label>
+    <input type="email" class="form-control" id="imputForm" placeholder="Nombre">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label"><strong>Apellido</strong></label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
+    <label for="imputForm" class="form-label"><strong>Apellido</strong></label>
+    <input type="email" class="form-control" id="imputForm" placeholder="Apellido">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label"><strong>Telefono</strong></label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="+ ... (codigo de area) + telefono">
+    <label for="imputForm" class="form-label"><strong>Telefono</strong></label>
+    <input type="email" class="form-control" id="imputForm" placeholder="+ ... (codigo de area) + telefono">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label"><strong>Email address</strong></label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    <label for="imputForm" class="form-label"><strong>Email address</strong></label>
+    <input type="email" class="form-control" id="imputForm" placeholder="name@example.com">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label"><strong>Mensaje</strong></label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <label for="imputForm" class="form-label"><strong>Mensaje</strong></label>
+    <textarea class="form-control" id="imputForm" rows="3"></textarea>
   </div>
   <div>
     <button type="button" id="contacto"> Enviar consulta </button>
