--- a/pages/Contactenos.html
+++ b/pages/Contactenos.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../imagenes/favicon-16x16.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css/estilos.css">
+    <link rel="stylesheet" href="../style.css/estilos.css">
+    <meta name="description"
+        content="A disposicion del cliente para poder brindarle asistencia las 24hs.">
+    <meta name="keywords" content="contacto, consultas, ayuda, asistencia">
     <title>Contactenos</title>
 </head>
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Estancia Los Colibries
-            <img class="icono" src="./imagenes/colibri.jpg" alt="icono">
+        <a class="navbar-brand" href="../index.html">Estancia Los Colibries
+            <img class="icono" src="../imagenes/colibri.jpg" alt="icono">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="Contactenos.html">Contactenos
-                  <img src="./imagenes/wp.png" alt="whatsapp">
+                  <img src="../imagenes/wp.png" alt="whatsapp">
                 </a>
             </div>
         </div>
@@ -68,7 +72,7 @@
   </div>
 </footer>
 
-    <script src="./js/app.js"></script>
+    <script src="../js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
