--- a/pages/Contactenos.html
+++ b/pages/Contactenos.html
@@ -16,24 +16,27 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">Estancia Los Colibries
-            <img class="icono" src="../imagenes/colibri.jpg" alt="icono">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <img class="icono" src="../imagenes/colibri.jpg" alt="icono">
+        <a class="navbar-brand" href="../index.html"> Estancia Los Colibries</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="./reserva.html">Reserva</a>
-            </div>
-        </div>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="Contactenos.html">Contactenos
-                  <img src="../imagenes/wp.png" alt="whatsapp">
-                </a>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./reserva.html">Reservas</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./Contactenos.html">Contactenos</a>
+              </li>
+                <li>
+                    <img src="../imagenes/wp.png" alt="whatsapp">
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
