--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </div>
     </nav>
+    <div id="ww_58b14ba34ba3c" v='1.3' loc='id' a='{"t":"ticker","lang":"es","sl_lpl":1,"ids":["wl3317"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://tiempolargo.com/cordoba_tiempo_25_dias/" id="ww_58b14ba34ba3c_u" target="_blank">El tiempo 25 días Córdoba</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_58b14ba34ba3c"></script>
 
     <h1> Bienvenidos a Estancia Los Colibries</h1>
 
