--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -130,5 +130,6 @@
 
     <script src="sweetalert2.all.min.js"></script>
     <script src="../js/app.js"></script>
+    <script src="../js/app2.js"></script>  
 </body>
 </html>
