--- a/index.html
+++ b/index.html
@@ -86,12 +86,16 @@
                     </div>
                 </div>
             </div>
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
         </div>
         <!--Carousel 2-->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -129,14 +133,16 @@
                     </div>
                 </div>
             </div>
-
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
         </div>
         <!--Carousel 3-->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -197,14 +203,16 @@
                 </div>
             </div>
             </div>
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
-            </button>
-
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
-            </button>
+        </button>
         </div>
         <!--Carousel 4-->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -244,14 +252,16 @@
                 </div>
             </div>
             </div>
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
-            </button>
-
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
-            </button>
+        </button>
         </div>
         <!--Carousel 5-->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -307,18 +317,23 @@
                     </div>
             </div>
             </div>
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
-            </button>
-
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
-            </button>
+        </button>
         </div>
     </section>
 
     <footer>
+        <img class="icono" src="./imagenes/instagram.png" alt="instagram">
+        <img class="icono" src="./imagenes/telegram.png" alt="telegram">
+        <img class="icono" src="./imagenes/facebook.png" alt="facebook">
         <div class="container flex justify-space-between footer-box">
             <p class="regular-text ">Copyright © 2023 <strong>Fiorella Del Carlo</strong>. Todos los derechos reservados.</p>
             <p class="regular-text ">Diseñado por <strong>Fiorella Del Carlo</strong></p>
@@ -329,6 +344,6 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
     <script src="./js/app.js"></script>
-    <script src="./js/carrito.js"></script>
+    <script src="./js/app2.js"></script>
 </body>
 </html>
