--- a/pages/Contactenos.html
+++ b/pages/Contactenos.html
@@ -40,6 +40,7 @@
         </div>
     </div>
 </nav>
+<div id="ww_58b14ba34ba3c" v='1.3' loc='id' a='{"t":"ticker","lang":"es","sl_lpl":1,"ids":["wl3317"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://tiempolargo.com/cordoba_tiempo_25_dias/" id="ww_58b14ba34ba3c_u" target="_blank">El tiempo 25 días Córdoba</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_58b14ba34ba3c"></script>
 
 <h1>Contacto</h1>
 <h3>Nuestro principal objetivo, es poder resolver sus dudas y que nos siga eligiendo</h3>
@@ -68,14 +69,19 @@
     <button type="button" id="contacto"> Enviar consulta </button>
   </div>
 
-<footer>
-  <div class="container flex justify-space-between footer-box">
-      <p class="regular-text ">Copyright © 2023 <strong>Fiorella Del Carlo</strong>. Todos los derechos reservados.</p>
-      <p class="regular-text ">Diseñado por <strong>Fiorella Del Carlo</strong></p>
-  </div>
+  <footer>
+    <img class="icono" src="../imagenes/instagram.png" alt="instagram">
+    <img class="icono" src="../imagenes/telegram.png" alt="telegram">
+    <img class="icono" src="../imagenes/facebook.png" alt="facebook">
+    <div class="container flex justify-space-between footer-box">
+        <p class="regular-text ">Copyright © 2023 <strong>Fiorella Del Carlo</strong>. Todos los derechos
+            reservados.</p>
+        <p class="regular-text ">Diseñado por <strong>Fiorella Del Carlo</strong></p>
+    </div>
 </footer>
 
     <script src="../js/app.js"></script>
+    <script src="../js/app2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
