--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -43,6 +43,7 @@
             </div>
         </div>
     </nav>
+    <div id="ww_58b14ba34ba3c" v='1.3' loc='id' a='{"t":"ticker","lang":"es","sl_lpl":1,"ids":["wl3317"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://tiempolargo.com/cordoba_tiempo_25_dias/" id="ww_58b14ba34ba3c_u" target="_blank">El tiempo 25 días Córdoba</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_58b14ba34ba3c"></script>
 
 <h1>Reserva</h1>
 
@@ -82,6 +83,132 @@
         <option value="14">14</option>
     </select>
     
+    <div class="moneda">
+        <select id="moneda-uno">
+            <option value="AED">AED</option>
+            <option value="ARS" selected>ARS</option>
+            <option value="AUD">AUD</option>
+            <option value="BGN">BGN</option>
+            <option value="BRL">BRL</option>
+            <option value="BSD">BSD</option>
+            <option value="CAD">CAD</option>
+            <option value="CHF">CHF</option>
+            <option value="CLP">CLP</option>
+            <option value="CNY">CNY</option>
+            <option value="COP">COP</option>
+            <option value="CZK">CZK</option>
+            <option value="DKK">DKK</option>
+            <option value="DOP">DOP</option>
+            <option value="EGP">EGP</option>
+            <option value="EUR">EUR</option>
+            <option value="FJD">FJD</option>
+            <option value="GBP">GBP</option>
+            <option value="GTQ">GTQ</option>
+            <option value="HKD">HKD</option>
+            <option value="HRK">HRK</option>
+            <option value="HUF">HUF</option>
+            <option value="IDR">IDR</option>
+            <option value="ILS">ILS</option>
+            <option value="INR">INR</option>
+            <option value="ISK">ISK</option>
+            <option value="JPY">JPY</option>
+            <option value="KRW">KRW</option>
+            <option value="KZT">KZT</option>
+            <option value="MXN">MXN</option>
+            <option value="MYR">MYR</option>
+            <option value="NOK">NOK</option>
+            <option value="NZD">NZD</option>
+            <option value="PAB">PAB</option>
+            <option value="PEN">PEN</option>
+            <option value="PHP">PHP</option>
+            <option value="PKR">PKR</option>
+            <option value="PLN">PLN</option>
+            <option value="PYG">PYG</option>
+            <option value="RON">RON</option>
+            <option value="RUB">RUB</option>
+            <option value="SAR">SAR</option>
+            <option value="SEK">SEK</option>
+            <option value="SGD">SGD</option>
+            <option value="THB">THB</option>
+            <option value="TRY">TRY</option>
+            <option value="TWD">TWD</option>
+            <option value="UAH">UAH</option>
+            <option value="USD">USD</option>
+            <option value="UYU">UYU</option>
+            <option value="VND">VND</option>
+            <option value="ZAR">ZAR</option>
+
+        </select>
+    </div>
+    <div class="moneda">
+        <select id="moneda-dos">
+            <option value="AED">AED</option>
+            <option value="ARS">ARS</option>
+            <option value="AUD">AUD</option>
+            <option value="BGN">BGN</option>
+            <option value="BRL">BRL</option>
+            <option value="BSD">BSD</option>
+            <option value="CAD">CAD</option>
+            <option value="CHF">CHF</option>
+            <option value="CLP">CLP</option>
+            <option value="CNY">CNY</option>
+            <option value="COP">COP</option>
+            <option value="CZK">CZK</option>
+            <option value="DKK">DKK</option>
+            <option value="DOP">DOP</option>
+            <option value="EGP">EGP</option>
+            <option value="EUR">EUR</option>
+            <option value="FJD">FJD</option>
+            <option value="GBP">GBP</option>
+            <option value="GTQ">GTQ</option>
+            <option value="HKD">HKD</option>
+            <option value="HRK">HRK</option>
+            <option value="HUF">HUF</option>
+            <option value="IDR">IDR</option>
+            <option value="ILS">ILS</option>
+            <option value="INR">INR</option>
+            <option value="ISK">ISK</option>
+            <option value="JPY">JPY</option>
+            <option value="KRW">KRW</option>
+            <option value="KZT">KZT</option>
+            <option value="MXN">MXN</option>
+            <option value="MYR">MYR</option>
+            <option value="NOK">NOK</option>
+            <option value="NZD">NZD</option>
+            <option value="PAB">PAB</option>
+            <option value="PEN">PEN</option>
+            <option value="PHP">PHP</option>
+            <option value="PKR">PKR</option>
+            <option value="PLN">PLN</option>
+            <option value="PYG">PYG</option>
+            <option value="RON">RON</option>
+            <option value="RUB">RUB</option>
+            <option value="SAR">SAR</option>
+            <option value="SEK">SEK</option>
+            <option value="SGD">SGD</option>
+            <option value="THB">THB</option>
+            <option value="TRY">TRY</option>
+            <option value="TWD">TWD</option>
+            <option value="UAH">UAH</option>
+            <option value="USD" selected>USD</option>
+            <option value="UYU">UYU</option>
+            <option value="VND">VND</option>
+            <option value="ZAR">ZAR</option>
+
+        </select>
+    </div>
+    <div class="taza-cambio-container">
+        <button class="button" id="taza" onclick="cambioMoneda()">
+            cambio
+        </button>
+
+        <div class="cambio" id="cambio"></div>
+
+    </div>
+    <button onclick="calcularDivisa()">Calcular</button>
+    <p id="CambioActual"> <strong>El Cambio actual es ARS:</strong></p>
+    <div class="mb-3 row">
+
     <div class="mb-3 row">
         <label for="inputResult" class="col-sm-3 col-form-label"> <strong>Valor:</strong></label>
         <div class="col-sm-10" id="valordiv">
@@ -122,8 +249,12 @@
 
 
     <footer>
+        <img class="icono" src="../imagenes/instagram.png" alt="instagram">
+        <img class="icono" src="../imagenes/telegram.png" alt="telegram">
+        <img class="icono" src="../imagenes/facebook.png" alt="facebook">
         <div class="container flex justify-space-between footer-box">
-            <p class="regular-text ">Copyright © 2023 <strong>Fiorella Del Carlo</strong>. Todos los derechos reservados.</p>
+            <p class="regular-text ">Copyright © 2023 <strong>Fiorella Del Carlo</strong>. Todos los derechos
+                reservados.</p>
             <p class="regular-text ">Diseñado por <strong>Fiorella Del Carlo</strong></p>
         </div>
     </footer>
